Update about page content for printer leasing

--- a/about.html
+++ b/about.html
@@ -13,24 +13,22 @@
   <meta name="author" content="Untree.co">
   <link rel="shortcut icon" href="favicon.png">
 
-  <meta name="description" content="" />
-  <meta name="keywords" content="bootstrap, bootstrap4" />
-
+  <meta name="description" content="기업 규모와 사용량에 맞춘 맞춤형 복합기 리스 솔루션. 초기 투자비 없이 최신 컬러/흑백 MFP를 운용하고, 설치·관리·소모품을 통합 지원 받으세요." />
+  <meta name="keywords" content="복합기, 프린터 리스, MFP, 임대, 사무기기" />
 		<!-- Bootstrap CSS -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 		<link href="css/tiny-slider.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-		<title>Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites by Untree.co </title>
+		<title>PrintLease 복합기 리스 솔루션 - 기업 맞춤 MFP 임대 서비스</title>
 	</head>
-
 	<body>
 
 		<!-- Start Header/Navigation -->
 		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
 
 			<div class="container">
-				<a class="navbar-brand" href="index.html">Furni<span>.</span></a>
+				<a class="navbar-brand" href="index.html">PrintLease<span>.</span></a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -65,13 +63,13 @@
 						<div class="col-lg-5">
 							<div class="intro-excerpt">
 								<h1>About Us</h1>
-								<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
-								<p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#" class="btn btn-white-outline">Explore</a></p>
+								<p class="mb-4">집이나 사무실에서 사용할 수 있는 다기능 프린터(MFP) 리스 전문 기업입니다. 인쇄·스캔·복사·팩스를 하나로 통합한 장비를 초기 비용 없이 합리적인 월 비용으로 제공합니다.</p>
+								<p><a href="" class="btn btn-secondary me-2">제품 보기</a><a href="#" class="btn btn-white-outline">상담 신청</a></p>
 							</div>
 						</div>
 						<div class="col-lg-7">
 							<div class="hero-img-wrap">
-								<img src="images/couch.png" class="img-fluid">
+								<img src="images/couch.png" class="img-fluid" alt="Multifunction Printer">
 							</div>
 						</div>
 					</div>
@@ -79,54 +77,52 @@
 			</div>
 		<!-- End Hero Section -->
 
-		
-
 		<!-- Start Why Choose Us Section -->
 		<div class="why-choose-section">
 			<div class="container">
 				<div class="row justify-content-between align-items-center">
 					<div class="col-lg-6">
 						<h2 class="section-title">Why Choose Us</h2>
-						<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
+						<p>기업 규모와 출력량 분석을 바탕으로 최적화된 복합기 리스 패키지를 설계합니다. 설치부터 원격 모니터링, 소모품 자동 공급까지 One-Stop 관리 서비스를 제공합니다.</p>
 
 						<div class="row my-5">
 							<div class="col-6 col-md-6">
 								<div class="feature">
 									<div class="icon">
-										<img src="images/truck.svg" alt="Image" class="imf-fluid">
+										<img src="images/truck.svg" alt="신속 설치" class="imf-fluid">
 									</div>
-									<h3>Fast &amp; Free Shipping</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<h3>신속 설치</h3>
+									<p>전국 주요 지역 당일·익일 설치 지원으로 업무 공백을 최소화합니다.</p>
 								</div>
 							</div>
 
 							<div class="col-6 col-md-6">
 								<div class="feature">
 									<div class="icon">
-										<img src="images/bag.svg" alt="Image" class="imf-fluid">
+										<img src="images/bag.svg" alt="투명한 비용" class="imf-fluid">
 									</div>
-									<h3>Easy to Shop</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<h3>투명한 리스 비용</h3>
+									<p>숨겨진 비용 없이 월 사용료 + 출력량 기준으로 명확하게 청구됩니다.</p>
 								</div>
 							</div>
 
 							<div class="col-6 col-md-6">
 								<div class="feature">
 									<div class="icon">
-										<img src="images/support.svg" alt="Image" class="imf-fluid">
+										<img src="images/support.svg" alt="24/7 지원" class="imf-fluid">
 									</div>
-									<h3>24/7 Support</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<h3>24/7 원격/현장 지원</h3>
+									<p>장애 발생 시 원격 진단 후 필요 시 엔지니어가 신속 출동합니다.</p>
 								</div>
 							</div>
 
 							<div class="col-6 col-md-6">
 								<div class="feature">
 									<div class="icon">
-										<img src="images/return.svg" alt="Image" class="imf-fluid">
+										<img src="images/return.svg" alt="유연한 업그레이드" class="imf-fluid">
 									</div>
-									<h3>Hassle Free Returns</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<h3>유연한 업그레이드</h3>
+									<p>출력량 증가나 기능 확장 필요 시 계약 중간에도 모델 변경 가능합니다.</p>
 								</div>
 							</div>
 
@@ -135,7 +131,7 @@
 
 					<div class="col-lg-5">
 						<div class="img-wrap">
-							<img src="images/why-choose-us-img.jpg" alt="Image" class="img-fluid">
+							<img src="images/why-choose-us-img.jpg" alt="복합기 리스 서비스" class="img-fluid">
 						</div>
 					</div>
 
@@ -151,6 +147,7 @@
 				<div class="row mb-5">
 					<div class="col-lg-5 mx-auto text-center">
 						<h2 class="section-title">Our Team</h2>
+						<p class="text-muted">복합기 운용 효율을 극대화하는 전문 인력이 고객 성공을 지원합니다.</p>
 					</div>
 				</div>
 
@@ -158,23 +155,21 @@
 
 					<!-- Start Column 1 -->
 					<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-						<img src="images/person_1.jpg" class="img-fluid mb-5">
+						<img src="images/person_1.jpg" class="img-fluid mb-5" alt="Lawson Arnold">
 						<h3 clas><a href="#"><span class="">Lawson</span> Arnold</a></h3>
-            <span class="d-block position mb-4">CEO, Founder, Atty.</span>
-            <p>Separated they live in.
-            Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+            <span class="d-block position mb-4">Founder &amp; Strategy Lead</span>
+            <p>10년 이상의 사무기기 솔루션 경험을 기반으로 최적 리스 패키지를 설계합니다.</p>
             <p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a></p>
 					</div> 
 					<!-- End Column 1 -->
 
 					<!-- Start Column 2 -->
 					<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-						<img src="images/person_2.jpg" class="img-fluid mb-5">
+						<img src="images/person_2.jpg" class="img-fluid mb-5" alt="Jeremy Walker">
 
 						<h3 clas><a href="#"><span class="">Jeremy</span> Walker</a></h3>
-            <span class="d-block position mb-4">CEO, Founder, Atty.</span>
-            <p>Separated they live in.
-            Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+            <span class="d-block position mb-4">Technical Support Lead</span>
+            <p>원격 모니터링과 신속한 현장 대응으로 다운타임을 최소화합니다.</p>
             <p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a></p>
 
 					</div> 
@@ -182,23 +177,21 @@
 
 					<!-- Start Column 3 -->
 					<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-						<img src="images/person_3.jpg" class="img-fluid mb-5">
+						<img src="images/person_3.jpg" class="img-fluid mb-5" alt="Patrik White">
 						<h3 clas><a href="#"><span class="">Patrik</span> White</a></h3>
-            <span class="d-block position mb-4">CEO, Founder, Atty.</span>
-            <p>Separated they live in.
-            Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+            <span class="d-block position mb-4">Supply Chain Manager</span>
+            <p>토너 및 부품 재고를 예측 관리해 중단 없는 출력 환경을 보장합니다.</p>
             <p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a></p>
 					</div> 
 					<!-- End Column 3 -->
 
 					<!-- Start Column 4 -->
 					<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-						<img src="images/person_4.jpg" class="img-fluid mb-5">
+						<img src="images/person_4.jpg" class="img-fluid mb-5" alt="Kathryn Ryan">
 
 						<h3 clas><a href="#"><span class="">Kathryn</span> Ryan</a></h3>
-            <span class="d-block position mb-4">CEO, Founder, Atty.</span>
-            <p>Separated they live in.
-            Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+            <span class="d-block position mb-4">Customer Success Manager</span>
+            <p>사용 패턴 분석 리포트를 제공해 비용 효율과 업무 생산성을 향상시킵니다.</p>
             <p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a></p>
 
           
@@ -211,8 +204,6 @@
 			</div>
 		</div>
 		<!-- End Team Section -->
-
-		
 
 		<!-- Start Testimonial Slider -->
 		<div class="testimonial-section before-footer-section">
@@ -233,22 +224,19 @@
 							</div>
 
 							<div class="testimonial-slider">
-								
 								<div class="item">
 									<div class="row justify-content-center">
 										<div class="col-lg-8 mx-auto">
-
 											<div class="testimonial-block text-center">
 												<blockquote class="mb-5">
-													<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
+													<p>&ldquo;출력량 급증에도 토너가 끊긴 적이 없습니다. 교체 시점을 미리 알려줘 업무 연속성이 크게 향상됐습니다.&rdquo;</p>
 												</blockquote>
-
 												<div class="author-info">
 													<div class="author-pic">
 														<img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
 													</div>
 													<h3 class="font-weight-bold">Maria Jones</h3>
-													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
+													<span class="position d-block mb-3">운영팀장, XYZ Inc.</span>
 												</div>
 											</div>
 
@@ -263,15 +251,15 @@
 
 											<div class="testimonial-block text-center">
 												<blockquote class="mb-5">
-													<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
+													<p>&ldquo;기존 장비 대비 유지비가 30% 이상 절감되었습니다. 월 사용 리포트로 예산 통제가 쉬워졌습니다.&rdquo;</p>
 												</blockquote>
 
 												<div class="author-info">
 													<div class="author-pic">
 														<img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
 													</div>
-													<h3 class="font-weight-bold">Maria Jones</h3>
-													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
+													<h3 class="font-weight-bold">David Lee</h3>
+													<span class="position d-block mb-3">재무팀, Alpha Corp.</span>
 												</div>
 											</div>
 
@@ -286,15 +274,15 @@
 
 											<div class="testimonial-block text-center">
 												<blockquote class="mb-5">
-													<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
+													<p>&ldquo;원격 진단으로 장애를 빠르게 해결해 출력 중단 시간이 크게 줄었습니다. 업그레이드도 매끄럽게 진행됐습니다.&rdquo;</p>
 												</blockquote>
 
 												<div class="author-info">
 													<div class="author-pic">
 														<img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
 													</div>
-													<h3 class="font-weight-bold">Maria Jones</h3>
-													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
+													<h3 class="font-weight-bold">Soojin Park</h3>
+													<span class="position d-block mb-3">IT 매니저, Delta Solutions</span>
 												</div>
 											</div>
 
@@ -312,8 +300,6 @@
 		</div>
 		<!-- End Testimonial Slider -->
 
-		
-
 		<!-- Start Footer Section -->
 		<footer class="footer-section">
 			<div class="container relative">
@@ -325,14 +311,14 @@
 				<div class="row">
 					<div class="col-lg-8">
 						<div class="subscription-form">
-							<h3 class="d-flex align-items-center"><span class="me-1"><img src="images/envelope-outline.svg" alt="Image" class="img-fluid"></span><span>Subscribe to Newsletter</span></h3>
+							<h3 class="d-flex align-items-center"><span class="me-1"><img src="images/envelope-outline.svg" alt="Image" class="img-fluid"></span><span>뉴스레터 구독</span></h3>
 
 							<form action="#" class="row g-3">
 								<div class="col-auto">
-									<input type="text" class="form-control" placeholder="Enter your name">
+									<input type="text" class="form-control" placeholder="이름 입력">
 								</div>
 								<div class="col-auto">
-									<input type="email" class="form-control" placeholder="Enter your email">
+									<input type="email" class="form-control" placeholder="이메일 입력">
 								</div>
 								<div class="col-auto">
 									<button class="btn btn-primary">
@@ -347,8 +333,8 @@
 
 				<div class="row g-5 mb-5">
 					<div class="col-lg-4">
-						<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Furni<span>.</span></a></div>
-						<p class="mb-4">Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant</p>
+						<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">PrintLease<span>.</span></a></div>
+						<p class="mb-4">최신 복합기를 초기 비용 없이 도입하고 예측 가능한 월 비용으로 안정적으로 운용하세요. 토너, 부품, 유지보수까지 통합된 리스 서비스로 업무 생산성을 높입니다.</p>
 
 						<ul class="list-unstyled custom-social">
 							<li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
@@ -362,35 +348,35 @@
 						<div class="row links-wrap">
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">About us</a></li>
-									<li><a href="#">Services</a></li>
-									<li><a href="#">Blog</a></li>
-									<li><a href="#">Contact us</a></li>
+									<li><a href="#">회사 소개</a></li>
+									<li><a href="#">서비스</a></li>
+									<li><a href="#">블로그</a></li>
+									<li><a href="#">문의하기</a></li>
 								</ul>
 							</div>
 
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">Support</a></li>
-									<li><a href="#">Knowledge base</a></li>
-									<li><a href="#">Live chat</a></li>
+									<li><a href="#">기술 지원</a></li>
+									<li><a href="#">지식 베이스</a></li>
+									<li><a href="#">라이브 채팅</a></li>
 								</ul>
 							</div>
 
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">Jobs</a></li>
-									<li><a href="#">Our team</a></li>
-									<li><a href="#">Leadership</a></li>
-									<li><a href="#">Privacy Policy</a></li>
+									<li><a href="#">채용</a></li>
+									<li><a href="#">팀</a></li>
+									<li><a href="#">리더십</a></li>
+									<li><a href="#">개인정보 처리방침</a></li>
 								</ul>
 							</div>
 
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">Nordic Chair</a></li>
-									<li><a href="#">Kruzo Aero</a></li>
-									<li><a href="#">Ergonomic Chair</a></li>
+									<li><a href="#">A4 Color MFP</a></li>
+									<li><a href="#">High-Speed Copier</a></li>
+									<li><a href="#">Eco Toner Solution</a></li>
 								</ul>
 							</div>
 						</div>
@@ -401,7 +387,7 @@
 				<div class="border-top copyright">
 					<div class="row pt-4">
 						<div class="col-lg-6">
-							<p class="mb-2 text-center text-lg-start">Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co">Untree.co</a> Distributed By <a hreff="https://themewagon.com">ThemeWagon</a>  <!-- License information: https://untree.co/license/ -->
+							<p class="mb-2 text-center text-lg-start">Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co">Untree.co</a> Distributed By <a hreff="https://themewagon.com">ThemeWagon</a> <!-- License information: https://untree.co/license/ -->
             </p>
 						</div>
 
@@ -417,8 +403,7 @@
 
 			</div>
 		</footer>
-		<!-- End Footer Section -->	
-
+		<!-- End Footer Section -->
 
 		<script src="js/bootstrap.bundle.min.js"></script>
 		<script src="js/tiny-slider.js"></script>
