Revert hero image to couch.png on all pages

--- a/contact.html
+++ b/contact.html
@@ -13,24 +13,24 @@
   <meta name="author" content="Untree.co">
   <link rel="shortcut icon" href="favicon.png">
 
-  <meta name="description" content="" />
-  <meta name="keywords" content="bootstrap, bootstrap4" />
+  <meta name="description" content="복합기 리스 상담, 기술 지원 문의, 맞춤 견적 요청을 위한 연락 페이지" />
+  <meta name="keywords" content="복합기 문의, 리스 상담, 출력 지원" />
+  <title>PrintLease Contact - 복합기 리스 상담 & 지원</title>
 
 		<!-- Bootstrap CSS -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 		<link href="css/tiny-slider.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-		<title>Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites by Untree.co </title>
 	</head>
 
 	<body>
 
 		<!-- Start Header/Navigation -->
-		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
+		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="PrintLease navigation bar">
 
 			<div class="container">
-				<a class="navbar-brand" href="index.html">Furni<span>.</span></a>
+				<a class="navbar-brand" href="index.html">PrintLease<span>.</span></a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -64,15 +64,16 @@
 					<div class="row justify-content-between">
 						<div class="col-lg-5">
 							<div class="intro-excerpt">
-								<h1>Contact</h1>
-								<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
-								<p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#" class="btn btn-white-outline">Explore</a></p>
+								<h1>문의 & 상담</h1>
+								<p class="mb-4">최적 복합기 리스 모델 선정, 비용 절감, 보안/환경 대응까지 궁금한 점을 편하게 남겨주세요. 전문 담당자가 신속히 답변드립니다.</p>
+								<p><a href="shop.html" class="btn btn-secondary me-2">제품 보기</a><a href="#contact-form" class="btn btn-white-outline">문의하기</a></p>
 							</div>
 						</div>
 						<div class="col-lg-7">
-							<div class="hero-img-wrap">
-								<img src="images/couch.png" class="img-fluid">
-							</div>
+							<picture class="hero-img-wrap">
+	<source srcset="images/couch.webp" type="image/webp">
+	<img src="images/couch.png" class="img-fluid" alt="Contact Hero">
+</picture>
 						</div>
 					</div>
 				</div>
@@ -81,97 +82,93 @@
 
 		
 		<!-- Start Contact Form -->
-		<div class="untree_co-section">
-      <div class="container">
+		<div class="untree_co-section" id="contact-form">
+	<div class="container">
 
-        <div class="block">
-          <div class="row justify-content-center">
-
-
-            <div class="col-md-8 col-lg-8 pb-4">
+		<div class="block">
+			<div class="row justify-content-center">
 
 
-              <div class="row mb-5">
-                <div class="col-lg-4">
-                  <div  class="service no-shadow align-items-center link horizontal d-flex active" data-aos="fade-left" data-aos-delay="0">
-                    <div class="service-icon color-1 mb-4">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
-                        <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
-                      </svg>
-                    </div> <!-- /.icon -->
-                    <div class="service-contents">
-                      <p>43 Raymouth Rd. Baltemoer, London 3910</p>
-                    </div> <!-- /.service-contents-->
-                  </div> <!-- /.service -->
-                </div>
-
-                <div class="col-lg-4">
-                  <div  class="service no-shadow align-items-center link horizontal d-flex active" data-aos="fade-left" data-aos-delay="0">
-                    <div class="service-icon color-1 mb-4">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
-                        <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
-                      </svg>
-                    </div> <!-- /.icon -->
-                    <div class="service-contents">
-                      <p>info@yourdomain.com</p>
-                    </div> <!-- /.service-contents-->
-                  </div> <!-- /.service -->
-                </div>
-
-                <div class="col-lg-4">
-                  <div  class="service no-shadow align-items-center link horizontal d-flex active" data-aos="fade-left" data-aos-delay="0">
-                    <div class="service-icon color-1 mb-4">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
-                      </svg>
-                    </div> <!-- /.icon -->
-                    <div class="service-contents">
-                      <p>+1 294 3925 3939</p>
-                    </div> <!-- /.service-contents-->
-                  </div> <!-- /.service -->
-                </div>
-              </div>
-
-              <form>
-                <div class="row">
-                  <div class="col-6">
-                    <div class="form-group">
-                      <label class="text-black" for="fname">First name</label>
-                      <input type="text" class="form-control" id="fname">
-                    </div>
-                  </div>
-                  <div class="col-6">
-                    <div class="form-group">
-                      <label class="text-black" for="lname">Last name</label>
-                      <input type="text" class="form-control" id="lname">
-                    </div>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label class="text-black" for="email">Email address</label>
-                  <input type="email" class="form-control" id="email">
-                </div>
-
-                <div class="form-group mb-5">
-                  <label class="text-black" for="message">Message</label>
-                  <textarea name="" class="form-control" id="message" cols="30" rows="5"></textarea>
-                </div>
-
-                <button type="submit" class="btn btn-primary-hover-outline">Send Message</button>
-              </form>
-
-            </div>
-
-          </div>
-
-        </div>
-
-      </div>
+				<div class="col-md-8 col-lg-8 pb-4">
 
 
-    </div>
-  </div>
+					<div class="row mb-5">
+						<div class="col-lg-4">
+							<div  class="service no-shadow align-items-center link horizontal d-flex active">
+								<div class="service-icon color-1 mb-4">
+									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+										<path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+									</svg>
+								</div> <!-- /.icon -->
+								<div class="service-contents">
+									<p>서울시 강남구 테크로 123 (본사)</p>
+								</div> <!-- /.service-contents-->
+							</div> <!-- /.service -->
+						</div>
 
+						<div class="col-lg-4">
+							<div  class="service no-shadow align-items-center link horizontal d-flex active">
+								<div class="service-icon color-1 mb-4">
+									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+										<path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
+									</svg>
+								</div> <!-- /.icon -->
+								<div class="service-contents">
+									<p>sales@printlease.co.kr</p>
+								</div> <!-- /.service-contents-->
+							</div> <!-- /.service -->
+						</div>
+
+						<div class="col-lg-4">
+							<div  class="service no-shadow align-items-center link horizontal d-flex active">
+								<div class="service-icon color-1 mb-4">
+									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+										<path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+									</svg>
+								</div> <!-- /.icon -->
+								<div class="service-contents">
+									<p>고객센터 1588-0000</p>
+								</div> <!-- /.service-contents-->
+							</div> <!-- /.service -->
+						</div>
+					</div>
+
+					<form>
+						<div class="row">
+							<div class="col-6">
+								<div class="form-group">
+									<label class="text-black" for="fname">이름</label>
+									<input type="text" class="form-control" id="fname" placeholder="홍길동">
+								</div>
+							</div>
+							<div class="col-6">
+								<div class="form-group">
+									<label class="text-black" for="company">회사명</label>
+									<input type="text" class="form-control" id="company" placeholder="ABC Corp">
+								</div>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="text-black" for="email">이메일</label>
+							<input type="email" class="form-control" id="email" placeholder="you@example.com">
+						</div>
+						<div class="form-group mb-5">
+							<label class="text-black" for="message">요청 내용 (예: 월 출력량, 원하는 기능)</label>
+							<textarea class="form-control" id="message" cols="30" rows="5" placeholder="예: 월 평균 15,000매 / 컬러 인쇄 비중 20% / OCR 스캔 필요"></textarea>
+						</div>
+						<button type="submit" class="btn btn-primary-hover-outline">문의 보내기</button>
+					</form>
+
+				</div>
+
+			</div>
+
+		</div>
+
+	</div>
+
+
+</div>
   <!-- End Contact Form -->
 
 		
@@ -209,8 +206,8 @@
 
 				<div class="row g-5 mb-5">
 					<div class="col-lg-4">
-						<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Furni<span>.</span></a></div>
-						<p class="mb-4">Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant</p>
+						<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">PrintLease<span>.</span></a></div>
+						<p class="mb-4">맞춤 상담을 통해 최적의 복합기 리스 플랜을 제안하고 안정적 운용을 지원합니다.</p>
 
 						<ul class="list-unstyled custom-social">
 							<li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
@@ -224,35 +221,35 @@
 						<div class="row links-wrap">
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">About us</a></li>
-									<li><a href="#">Services</a></li>
-									<li><a href="#">Blog</a></li>
-									<li><a href="#">Contact us</a></li>
+									<li><a href="about.html">회사 소개</a></li>
+									<li><a href="services.html">서비스</a></li>
+									<li><a href="blog.html">블로그</a></li>
+									<li><a href="contact.html">문의하기</a></li>
 								</ul>
 							</div>
 
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">Support</a></li>
-									<li><a href="#">Knowledge base</a></li>
-									<li><a href="#">Live chat</a></li>
+									<li><a href="#">기술 지원</a></li>
+									<li><a href="#">지식 베이스</a></li>
+									<li><a href="#">라이브 채팅</a></li>
 								</ul>
 							</div>
 
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">Jobs</a></li>
-									<li><a href="#">Our team</a></li>
-									<li><a href="#">Leadership</a></li>
-									<li><a href="#">Privacy Policy</a></li>
+									<li><a href="#">채용</a></li>
+									<li><a href="#">팀</a></li>
+									<li><a href="#">리더십</a></li>
+									<li><a href="#">개인정보 처리방침</a></li>
 								</ul>
 							</div>
 
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">Nordic Chair</a></li>
-									<li><a href="#">Kruzo Aero</a></li>
-									<li><a href="#">Ergonomic Chair</a></li>
+									<li><a href="#">A4 Color MFP</a></li>
+									<li><a href="#">High-Speed Copier</a></li>
+									<li><a href="#">Eco Toner Solution</a></li>
 								</ul>
 							</div>
 						</div>
