--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 						</div>
 						<div class="col-lg-7">
 							<div class="hero-img-wrap">
-								<img src="images/couch.png" class="img-fluid" alt="Multifunction Printer">
-							</div>
+	<img src="images/couch.png" class="img-fluid" alt="Multifunction Printer">
+</div>
 						</div>
 					</div>
 				</div>
@@ -276,100 +276,101 @@
 
 		<!-- Start Testimonial Slider -->
 		<div class="testimonial-section">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-7 mx-auto text-center">
-						<h2 class="section-title">Testimonials</h2>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-7 mx-auto text-center">
+				<h2 class="section-title">추천사</h2>
+			</div>
+		</div>
+
+		<div class="row justify-content-center">
+			<div class="col-lg-12">
+				<div class="testimonial-slider-wrap text-center">
+
+					<div id="testimonial-nav">
+						<span class="prev" data-controls="prev"><span class="fa fa-chevron-left"></span></span>
+						<span class="next" data-controls="next"><span class="fa fa-chevron-right"></span></span>
 					</div>
-				</div>
 
-				<div class="row justify-content-center">
-					<div class="col-lg-12">
-						<div class="testimonial-slider-wrap text-center">
+					<div class="testimonial-slider">
+						
+						<!-- 동일 추천사 컨텐츠 (모든 페이지에서 공유) -->
+						<div class="item">
+							<div class="row justify-content-center">
+								<div class="col-lg-8 mx-auto">
 
-							<div id="testimonial-nav">
-								<span class="prev" data-controls="prev"><span class="fa fa-chevron-left"></span></span>
-								<span class="next" data-controls="next"><span class="fa fa-chevron-right"></span></span>
+									<div class="testimonial-block text-center">
+										<blockquote class="mb-5">
+											<p>&ldquo;출력량 급증에도 토너가 끊긴 적이 없습니다. 교체 시점을 미리 알려줘 업무 연속성이 크게 향상됐습니다.&rdquo;</p>
+										</blockquote>
+
+										<div class="author-info">
+											<div class="author-pic">
+												<img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
+											</div>
+											<h3 class="font-weight-bold">Maria Jones</h3>
+											<span class="position d-block mb-3">운영팀장, XYZ Inc.</span>
+										</div>
+									</div>
+
+								</div>
 							</div>
+						</div> 
+						<!-- END item -->
 
-							<div class="testimonial-slider">
-								
-								<div class="item">
-									<div class="row justify-content-center">
-										<div class="col-lg-8 mx-auto">
+						<div class="item">
+							<div class="row justify-content-center">
+								<div class="col-lg-8 mx-auto">
 
-											<div class="testimonial-block text-center">
-												<blockquote class="mb-5">
-													<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
-												</blockquote>
+									<div class="testimonial-block text-center">
+										<blockquote class="mb-5">
+											<p>&ldquo;기존 장비 대비 유지비가 30% 이상 절감되었습니다. 월 사용 리포트로 예산 통제가 쉬워졌습니다.&rdquo;</p>
+										</blockquote>
 
-												<div class="author-info">
-													<div class="author-pic">
-														<img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
-													</div>
-													<h3 class="font-weight-bold">Maria Jones</h3>
-													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
-												</div>
+										<div class="author-info">
+											<div class="author-pic">
+												<img src="images/person-1.png" alt="David Lee" class="img-fluid">
 											</div>
-
+											<h3 class="font-weight-bold">David Lee</h3>
+											<span class="position d-block mb-3">재무팀, Alpha Corp.</span>
 										</div>
 									</div>
-								</div> 
-								<!-- END item -->
 
-								<div class="item">
-									<div class="row justify-content-center">
-										<div class="col-lg-8 mx-auto">
-
-											<div class="testimonial-block text-center">
-												<blockquote class="mb-5">
-													<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
-												</blockquote>
-
-												<div class="author-info">
-													<div class="author-pic">
-														<img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
-													</div>
-													<h3 class="font-weight-bold">Maria Jones</h3>
-													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
-												</div>
-											</div>
-
-										</div>
-									</div>
-								</div> 
-								<!-- END item -->
-
-								<div class="item">
-									<div class="row justify-content-center">
-										<div class="col-lg-8 mx-auto">
-
-											<div class="testimonial-block text-center">
-												<blockquote class="mb-5">
-													<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
-												</blockquote>
-
-												<div class="author-info">
-													<div class="author-pic">
-														<img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
-													</div>
-													<h3 class="font-weight-bold">Maria Jones</h3>
-													<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
-												</div>
-											</div>
-
-										</div>
-									</div>
-								</div> 
-								<!-- END item -->
-
+								</div>
 							</div>
+						</div> 
+						<!-- END item -->
 
-						</div>
+						<div class="item">
+							<div class="row justify-content-center">
+								<div class="col-lg-8 mx-auto">
+
+									<div class="testimonial-block text-center">
+										<blockquote class="mb-5">
+											<p>&ldquo;원격 진단으로 장애를 빠르게 해결해 출력 중단 시간이 크게 줄었습니다. 업그레이드도 매끄럽게 진행됐습니다.&rdquo;</p>
+										</blockquote>
+
+										<div class="author-info">
+											<div class="author-pic">
+												<img src="images/person-1.png" alt="Soojin Park" class="img-fluid">
+											</div>
+											<h3 class="font-weight-bold">Soojin Park</h3>
+											<span class="position d-block mb-3">IT 매니저, Delta Solutions</span>
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</div> 
+						<!-- END item -->
+
 					</div>
+
 				</div>
 			</div>
 		</div>
+	</div>
+</div>
 		<!-- End Testimonial Slider -->
 
 		<!-- Start Blog Section -->
