--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 	<body>
 
 		<!-- Start Header/Navigation -->
-		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
+		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="PrintLease navigation bar">
 
 			<div class="container">
 				<a class="navbar-brand" href="index.html">PrintLease<span>.</span></a>
@@ -69,8 +69,8 @@
 						</div>
 						<div class="col-lg-7">
 							<div class="hero-img-wrap">
-								<img src="images/couch.png" class="img-fluid" alt="Multifunction Printer">
-							</div>
+	<img src="images/couch.png" class="img-fluid" alt="Multifunction Printer">
+</div>
 						</div>
 					</div>
 				</div>
@@ -210,7 +210,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-7 mx-auto text-center">
-						<h2 class="section-title">Testimonials</h2>
+						<h2 class="section-title">추천사</h2>
 					</div>
 				</div>
 
