--- a/about.html
+++ b/about.html
@@ -156,7 +156,7 @@
 					<!-- Start Column 1 -->
 					<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
 						<img src="images/person_1.jpg" class="img-fluid mb-5" alt="Lawson Arnold">
-						<h3 clas><a href="#"><span class="">Lawson</span> Arnold</a></h3>
+						<h3 clas><a href="#"><span class="">이재용</span> CEO</a></h3>
             <span class="d-block position mb-4">Founder &amp; Strategy Lead</span>
             <p>10년 이상의 사무기기 솔루션 경험을 기반으로 최적 리스 패키지를 설계합니다.</p>
             <p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a></p>
